--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,22 +21,27 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: uenot/tobyuenodotcom
-          ref: dev
-            
-      - name: build
-        uses: jorelali/setup-elm@v5
+          ref: main
+
+      - name: node-download
+        uses: actions/setup-node@v4
         with:
-          elm-version: 0.19.1
-      - run: elm make src/Main.elm
+          node-version-file: 'package.json'
+
+      - name: ci
+        run: npm ci
+
+      - name: build
+        run: npm run build
 
       - name: pages-setup
-        uses: actions/configure-pages@v3
+        uses: actions/configure-pages@v5
 
       - name: upload
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-pages-artifact@v3
         with:
-          path: '.'
+          path: './dist'
           
       - name: pages-deploy
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
